# mini-erp

./: .gitignore  DEMO.md  README.md  config.py  pyproject.toml  run.py
app/: __init__.py  extensions.py
app/forms/: __init__.py  auth.py
app/models/: __init__.py  bom.py  logs.py  manufacturing.py  partner.py  product.py  purchase.py  sales.py  sequence.py  user.py
app/routes/: __init__.py  admin.py  api.py  audit.py  auth.py  bom.py  dashboard.py  landing.py  manufacturing.py  product.py  profile.py  purchase.py  sales.py
app/services/: __init__.py  access.py  admin.py  audit.py  audit_query.py  bulk_import.py  dashboard.py  gendata.py  illustrations.py  inventory.py  jwt_auth.py  manufacturing.py  pagination.py  procurement.py  product.py  profile.py  purchase.py  rights_grid.py  roles.py  sales.py  seed.py  sequences.py  unitofwork.py  urlscheme.py
app/templates/: base.html
data/: README.md  access_presets.json  audit_logs.json  boms.json  customers.json  manufacturing_orders.json  products.json  purchase_orders.json  sales_orders.json  users.json  vendors.json
data/avatars/: README.md
data/generators/: __init__.py
migrations/versions/: 48bbfa0c12e6_rbac_user_role_status_requested_role.py  69c6bc598d60_add_sequence_table.py  70d0ecb42933_index_customer_name.py  a8f5af412a16_initial_schema.py  fdd72afebc58_add_expected_date_to_so_and_po.py
tests/: conftest.py  test_findings.py  test_inventory_and_sales.py  test_jwt_api.py  test_procurement_and_access.py  test_rbac.py  test_urlscheme.py  test_waitlist.py
tools/: fetch_avatars.py
(+45 files in other folders)
